feat(aio): TocComponent thoroughly revised

--- a/aio/src/app/embedded/toc/toc.component.html
+++ b/aio/src/app/embedded/toc/toc.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="hasContent" [class.embedded]="isEmbedded" [class.closed]="isClosed">
+<div *ngIf="hasToc" [class.closed]="isClosed">
   <div *ngIf="!hasSecondary"class="toc-heading">Contents</div>
   <div *ngIf="hasSecondary" class="toc-heading secondary"
       (click)="toggle()"
@@ -10,7 +10,11 @@
       </button>
   </div>
 
-  <div class="toc-list" #toclist></div>
+  <ul class="toc-list">
+    <li *ngFor="let toc of tocList" title="{{toc.title}}" class="{{toc.level}}" [class.secondary]="toc.isSecondary">
+      <a [href]="toc.href" [innerHTML]="toc.content"></a>
+    </li>
+  </ul>
 
   <button type="button" (click)="toggle()" *ngIf="hasSecondary"
     class="toc-more-items material-icons" [class.closed]="isClosed"
